fix description size and spacing bug

--- a/frontend/styles/sponsors.module.css
+++ b/frontend/styles/sponsors.module.css
@@ -117,13 +117,13 @@ a.subheader {
   margin-bottom: 20px;
 }
 
-.sponsorDescription {
+.sponsorDescription p {
   color: #313638;
-  font-size: 18pt;
+  font-size: 12pt;
   font-family: "Montserrat", sans-serif;
   margin-top: 2%;
   text-align: justify;
-  margin-bottom: 100px;
+  margin-bottom: 20px;
 }
 
 .paper {
@@ -162,7 +162,7 @@ a.subheader {
 .sponsorLink {
   display: inline;
   font-family: "Montserrat", sans-serif;
-  font-size: 11.5pt;
+  font-size: 12pt;
   margin: 0;
   margin-bottom: 0px;
   text-align: justify;
@@ -171,7 +171,7 @@ a.subheader {
 .sponsorWebsite {
   color: #313638;
   font-family: "Montserrat", sans-serif;
-  font-size: 11.5pt;
+  font-size: 12pt;
   font-weight: bold;
   margin-right: 1%;
   margin-bottom: 0px;
@@ -191,8 +191,8 @@ a.subheader {
   justify-content: center;
   max-width: 100%;
   max-height: 100%;
-  margin: -113px 0;
-  padding: 113px 0;
+  margin: -115px 0;
+  padding: 115px 0;
 }
 
 .modal {
@@ -219,7 +219,7 @@ a.subheader {
 
 /*--- Dark mode ---*/
 @media (prefers-color-scheme:dark) {
-  .sponsorDescription {
+  .sponsorDescription p {
     color: white;
   }
 
